// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrendsController (e2e) /beverage-trends (GET) negative should cater for lack of query 1`] = `
{
  "error": "Bad Request",
  "message": [
    "type must be one of the following values: week, month",
    "type should not be empty",
    "type must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`TrendsController (e2e) /beverage-trends (GET) negative should not allow non-logged in users 1`] = `
{
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`TrendsController (e2e) /beverage-trends (GET) positive should get beverage trends for month 1`] = `
{
  "beveragesPerDay": [
    {
      "alcohol": 0,
      "tea_coffee": 4,
      "water": 6,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 2,
    },
    {
      "alcohol": 0,
      "tea_coffee": 3,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 2,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 4,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 1,
      "tea_coffee": 2,
      "water": 4,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
  ],
  "highestValue": 6,
  "legend": [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
    "19",
    "20",
    "21",
    "22",
    "23",
    "24",
    "25",
    "26",
    "27",
    "28",
    "29",
    "30",
  ],
}
`;

exports[`TrendsController (e2e) /beverage-trends (GET) positive should get beverage trends for week 1`] = `
{
  "beveragesPerDay": [
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 4,
    },
    {
      "alcohol": 0,
      "tea_coffee": 0,
      "water": 0,
    },
    {
      "alcohol": 1,
      "tea_coffee": 2,
      "water": 4,
    },
  ],
  "highestValue": 4,
  "legend": [
    "M",
    "T",
    "W",
    "T",
    "F",
    "S",
    "S",
  ],
}
`;

exports[`TrendsController (e2e) /excercise-trends (GET) negative should cater for lack of query 1`] = `
{
  "error": "Bad Request",
  "message": [
    "type must be one of the following values: week, month",
    "type should not be empty",
    "type must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`TrendsController (e2e) /excercise-trends (GET) negative should not allow non-logged in users 1`] = `
{
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`TrendsController (e2e) /excercise-trends (GET) positive should get excercise trends for month 1`] = `
{
  "excercisePerDay": [
    0,
    0,
    30,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    35,
    0,
    75,
    0,
    0,
    0,
  ],
  "highestValue": 75,
  "legend": [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
    "19",
    "20",
    "21",
    "22",
    "23",
    "24",
    "25",
    "26",
    "27",
    "28",
    "29",
    "30",
  ],
}
`;

exports[`TrendsController (e2e) /excercise-trends (GET) positive should get excercise trends for week 1`] = `
{
  "excercisePerDay": [
    0,
    35,
    0,
    75,
  ],
  "highestValue": 75,
  "legend": [
    "M",
    "T",
    "W",
    "T",
    "F",
    "S",
    "S",
  ],
}
`;

exports[`TrendsController (e2e) /meal-trends (GET) negative should cater for lack of query 1`] = `
{
  "error": "Bad Request",
  "message": [
    "type must be one of the following values: week, month",
    "type should not be empty",
    "type must be a string",
  ],
  "statusCode": 400,
}
`;

exports[`TrendsController (e2e) /meal-trends (GET) negative should not allow non-logged in users 1`] = `
{
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`TrendsController (e2e) /meal-trends (GET) positive should get meal trends for month 1`] = `
{
  "legend": [
    "1",
    "2",
    "3",
    "4",
    "5",
    "6",
    "7",
    "8",
    "9",
    "10",
    "11",
    "12",
    "13",
    "14",
    "15",
    "16",
    "17",
    "18",
    "19",
    "20",
    "21",
    "22",
    "23",
    "24",
    "25",
    "26",
    "27",
    "28",
    "29",
    "30",
  ],
  "mealTotals": {
    "breakfast": 6,
    "dinner": 5,
    "lunch": 5,
    "snack_1": 2,
    "snack_2": 1,
  },
  "mealsPerDay": [
    {
      "id": "day_1",
      "meals": [
        1,
        0,
        1,
        0,
        0,
      ],
    },
    {
      "id": "day_2",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_3",
      "meals": [
        1,
        1,
        1,
        0,
        1,
      ],
    },
    {
      "id": "day_4",
      "meals": [
        1,
        0,
        1,
        0,
        1,
      ],
    },
    {
      "id": "day_5",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_6",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_7",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_8",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_9",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_10",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_11",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_12",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_13",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_14",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_15",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_16",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_17",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_18",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_19",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_20",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_21",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_22",
      "meals": [
        1,
        0,
        0,
        0,
        1,
      ],
    },
    {
      "id": "day_23",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_24",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_25",
      "meals": [
        1,
        0,
        1,
        0,
        1,
      ],
    },
    {
      "id": "day_26",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_27",
      "meals": [
        1,
        1,
        1,
        1,
        1,
      ],
    },
    {
      "id": "day_28",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_29",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_30",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
  ],
  "totalValues": 30,
}
`;

exports[`TrendsController (e2e) /meal-trends (GET) positive should get meal trends for week 1`] = `
{
  "legend": [
    "M",
    "T",
    "W",
    "T",
    "F",
    "S",
    "S",
  ],
  "mealTotals": {
    "breakfast": 2,
    "dinner": 2,
    "lunch": 2,
    "snack_1": 1,
    "snack_2": 1,
  },
  "mealsPerDay": [
    {
      "id": "day_M",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_T",
      "meals": [
        1,
        0,
        1,
        0,
        1,
      ],
    },
    {
      "id": "day_W",
      "meals": [
        0,
        0,
        0,
        0,
        0,
      ],
    },
    {
      "id": "day_T",
      "meals": [
        1,
        1,
        1,
        1,
        1,
      ],
    },
  ],
  "totalValues": 7,
}
`;
